fix(security): enforce length and characters on the content-type pipeline
ContentTypeValidationPipeline was a single AllowBlockListStage, so a
Content-Type value reached the list check unbounded and unscanned. It now
composes LengthValidationStage -> CharacterValidationStage ->
AllowBlockListStage under HEADER_VALUE, the same order the header pipelines
use, so an unbounded value is cut before the character scan walks it and a
CR/LF smuggled into the parameters of an allow-listed media type is rejected.

AllowBlockListStage additionally canonicalises its configured entries the way
it already canonicalised incoming values: in mediaTypeOnly mode both sides now
go through one shared helper, so a block-list entry written as
"text/html; charset=utf-8" actually blocks a plain "text/html" request instead
of being an unreachable list member. An entry that canonicalises to the empty
media type is rejected at construction. Header-name lists are unaffected -
they keep whole-value matching.

The Javadoc and doc/http-security claims that the content-type pipeline
applies no length limit and no character validation are retracted at every
site that asserted them.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KtG76piPpv85843K82rNgo